--- a/employees_result.html
+++ b/employees_result.html
@@ -59,7 +59,7 @@
             margin-bottom: 20px;
         }
 
-        .menu-item {
+        .menu-card-item {
             padding: 15px;
             background-color: #f9f9f9;
             margin-bottom: 10px;
@@ -77,7 +77,7 @@
             border-left-color: #ff9933;
         }
 
-        .menu-item.selected {
+        .menu-card-item.selected {
             background-color: #fff7ec;
             border-left-color: #ff9933;
         }
@@ -96,7 +96,7 @@
             color: #797979;
         }
 
-        .menu-item p {
+        .menu-card-item p {
             color: #282828;
             font-size: 14px;
             margin-bottom: 10px;
@@ -136,7 +136,7 @@
             font-weight: bold;
         }
 
-        .menu-item.selected .selected-badge {
+        .menu-card-item.selected .selected-badge {
             display: inline-block;
         }
 
@@ -251,7 +251,7 @@
             <h2 class="h2-title">Available Menus - Select One</h2>
             <p class="text-subtitle" style="margin-top: 10px;">Please choose one menu from the options below</p>
             <div class="menu-list">
-                <div class="menu-item menu-selectable" onclick="selectMenu(1)">
+                <div class="menu-card-item menu-selectable" onclick="selectMenu(1)">
                     <input type="radio" name="menuChoice" id="menu1" value="1" style="display: none;">
                     <div class="menu-content">
                         <h3 class="h3-title">Menu 1: Mediterranean Delight</h3>
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu-item menu-selectable" onclick="selectMenu(2)">
+                <div class="menu-card-item menu-selectable" onclick="selectMenu(2)">
                     <input type="radio" name="menuChoice" id="menu2" value="2" style="display: none;">
                     <div class="menu-content">
                         <h3 class="h3-title">Menu 2: Asian Fusion Bowl</h3>
@@ -283,7 +283,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu-item menu-selectable" onclick="selectMenu(3)">
+                <div class="menu-card-item menu-selectable" onclick="selectMenu(3)">
                     <input type="radio" name="menuChoice" id="menu3" value="3" style="display: none;">
                     <div class="menu-content">
                         <h3 class="h3-title">Menu 3: Classic Italian Pasta</h3>
@@ -347,7 +347,7 @@
 
         function selectMenu(menuId) {
             // Remove selected class from all menu items
-            document.querySelectorAll('.menu-item').forEach(item => {
+            document.querySelectorAll('.menu-card-item').forEach(item => {
                 item.classList.remove('selected');
             });
 
@@ -390,7 +390,7 @@
 
             // Reset form and selection after submission
             document.getElementById('employeeForm').reset();
-            document.querySelectorAll('.menu-item').forEach(item => {
+            document.querySelectorAll('.menu-card-item').forEach(item => {
                 item.classList.remove('selected');
             });
             selectedMenuId = null;
